crates/specta-zod/src/snapshots/specta_zod__zod__tests__bigint_bigint.snap
---
source: crates/specta-zod/src/zod.rs
expression: output
---
export const withBigIntSchema = z.object({
  big: z.bigint(),
});
export type WithBigInt = z.infer<typeof withBigIntSchema>;
