crates/specta-zod/src/snapshots/specta_zod__zod__tests__externally_tagged_enum.snap
---
source: crates/specta-zod/src/zod.rs
expression: output
---
export const externallyTaggedEnumSchema = z.union([z.literal("Unit"), z.object({ WithData: z.string() }), z.object({ WithStruct: z.object({ field: z.number() }) })]);
export type ExternallyTaggedEnum = z.infer<typeof externallyTaggedEnumSchema>;
