crates/specta-zod/src/snapshots/specta_zod__zod__tests__internally_tagged_enum.snap
---
source: crates/specta-zod/src/zod.rs
expression: output
---
export const internallyTaggedEnumSchema = z.union([z.object({ type: z.literal("Variant1"), value: z.string() }), z.object({ type: z.literal("Variant2"), count: z.number() })]);
export type InternallyTaggedEnum = z.infer<typeof internallyTaggedEnumSchema>;
