crates/specta-zod/src/snapshots/specta_zod__zod__tests__nested_optional.snap
---
source: crates/specta-zod/src/zod.rs
expression: output
---
export const withNestedOptionalSchema = z.object({
  nested: z.preprocess((val) => val ?? undefined, jsonObject(z.array(z.string())).optional()),
});
export type WithNestedOptional = z.infer<typeof withNestedOptionalSchema>;
