crates/specta-zod/src/snapshots/specta_zod__zod__tests__newtype_wrapper.snap
---
source: crates/specta-zod/src/zod.rs
expression: output
---
export const newtypeWrapperSchema = z.string();
export type NewtypeWrapper = z.infer<typeof newtypeWrapperSchema>;
